[gd_scene load_steps=12 format=3 uid="uid://nlef86joikle"]

[ext_resource type="Script" path="res://Scenes/Components/Bullets/Bullet01/bullet01.gd" id="1_8n4km"]
[ext_resource type="PackedScene" uid="uid://t21jubj15vvd" path="res://Scenes/Components/Smoketrail/Smoketrail.tscn" id="2_8pbjy"]
[ext_resource type="Texture2D" uid="uid://ctlp63v88s8tv" path="res://Assets/Images/Sprites/Projectiles/All_Rocket.png" id="2_vk8ot"]
[ext_resource type="Texture2D" uid="uid://h058s176bw7m" path="res://Assets/Images/Textures/256/spotlight_2.png" id="4_n1j70"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_26gd7"]
radius = 9.0
height = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7e8we"]
atlas = ExtResource("2_vk8ot")
region = Rect2(352, 96, 32, 15)

[sub_resource type="Gradient" id="Gradient_pddsc"]
offsets = PackedFloat32Array(0.0152905, 0.66055, 0.877676, 1)
colors = PackedColorArray(0, 0, 0, 0, 0.728822, 0.728822, 0.728822, 1, 0.169, 0.541, 1.855, 1, 0.3, 1.16, 1.929, 1)

[sub_resource type="Animation" id="Animation_oycv0"]
length = 0.25
step = 0.01

[sub_resource type="Animation" id="Animation_cjtv8"]
resource_name = "bullet_explosion"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.06, 0.0601, 0.0602, 0.1, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.16129, 0.16129), Vector2(0.16129, 0.16129), Vector2(0, 0), Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8qke0"]
_data = {
"RESET": SubResource("Animation_oycv0"),
"bullet_explosion": SubResource("Animation_cjtv8")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hdjky"]
blend_mode = 1

[node name="Bullet01" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_8n4km")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_26gd7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_7e8we")
flip_h = true

[node name="Smoketrail" parent="." instance=ExtResource("2_8pbjy")]
width = 40.0
limited_lifetime = true
wildness = 10.0
min_spawn_distance = 3.0
gravity = Vector2(0, 0)
gradient_col = SubResource("Gradient_pddsc")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8qke0")
}

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(2.38419e-07, 0)
scale = Vector2(1.6, 1)

[node name="explosion" type="Sprite2D" parent="."]
modulate = Color(0.3, 1.16, 1.929, 1)
material = SubResource("CanvasItemMaterial_hdjky")
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_n1j70")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
